Fixed verticle alignment in footer.

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -32,5 +32,4 @@ h3 {
 .space-evenly {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
 }
